# SketchUploader

./: .gitignore  ABOUT.md  README.md  alder.config.example.json  alder.config.json  index.html  package-lock.json  package.json
.github/workflows/: release-dry-run.yml  release.yml
docs/: downstream-release-consumer-example.yml
scripts/: CheckDeps.ps1  CheckDeps.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  alder.config.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
