[package]
name = "alder"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2.9.2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.8.1"
rfd = "0.15.4"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }
